--- a/css/portadas.css
+++ b/css/portadas.css
@@ -46,7 +46,7 @@
 @media(min-width: 1024px) {
     #slider img {
         display: initial;
-        width: 200vh;
+        width: 100%;
         height: 87vh;
         text-align: center;
     }
