--- a/css/estilo.css
+++ b/css/estilo.css
@@ -89,7 +89,7 @@ header h2 {
 	text-align: center;
 	padding: 10px;
 	font: bold 18px "Cambria";
-}
+}	
 
 #conocer:hover {
 	cursor: pointer;
@@ -105,6 +105,12 @@ header h2 {
 	padding: 3% 5%;
 	margin: 10%;
 	word-spacing: 10px;
+}
+
+#presentacion {
+	width: 100%;
+	height: 200em;
+	background: #000;
 }
 
 
