--- a/css/portadas.css
+++ b/css/portadas.css
@@ -1,14 +1,25 @@
-#slider {
-    /*display: flex;*/
+#c-slider {
     width: 100%;
+    /*overflow: hidden;*/
+    margin: auto;
 }
 
-#slider img {
-    display: block;
+#c-slider #slider{
+    display: flex;
+    width: 500%;
+    height: 100vh;
+
+}
+
+#slider .portada {
+    width: 80%;
+}
+
+.portada img {
     width: 100%;
     height: 100vh;
-    overflow: hidden;
 }
+
 
 
 #btn-prev, #btn-next {
@@ -19,7 +30,7 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    line-height: 40px;
+    line-height: 40px|z;
     font-size: 30px;
     font-weight: bold;
     text-align: center;
@@ -41,24 +52,9 @@
 	right: 10px;
 }
 
-.portada
-/*.portada_1, .portada_2, .portada_3, .portada_4*/ {
-    width: auto;
-    height: 100vh;
-    background: black;
-}
 
+/*Si la pantalla es de tamaño escritorio*/
 @media(min-width: 1024px) {
-    #slider img {
-        display: initial;
-        width: 100%;
-        height: 87vh;
-        text-align: center;
-    }
-
-    .portada img {
-        margin-top: 12vh;
-    }
 
     #btn-prev{
         transform: translateX(100%);
