--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,5 @@
 @import url("portadas.css");
+@import url("editorial.css");
 @import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro');
 
 * {
@@ -43,7 +44,7 @@ header h1{
 header h2 {
 	font-size: 21px;
 	width: 80%;
-	margin-left: 10%;	
+	margin-left: 10%;
 }
 
 .menu {
@@ -122,7 +123,7 @@ section aside {
 
     header {
        	background: rgb(0, 0, 0);
-    	height: 12vh; 
+    	height: 12vh;
     }
 
     .menu {
@@ -130,7 +131,7 @@ section aside {
     }
 
     .menu ul {
-    	display: flex; 
+    	display: flex;
 		flex-direction: row;
 		float: left;
     }
@@ -147,7 +148,7 @@ section aside {
     	top: 90%;
     	left: 20%;
     	width: 300px;
-    }	
+    }
 
 	#menu_serv li{
 		padding: 5% 0;
