--- a/css/editorial.css
+++ b/css/editorial.css
@@ -1,27 +1,50 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 
-#editorial{
+.contenido{
   width: 100%;
   height: 100vh;
   margin: auto;
   padding-top: 10%;
-  background: #00bfff;
+  background: #4682B4;
   color: white;
 }
 
 #cont_editorial {
-  border: solid 2px #000;
+  border: solid 2px #fff;
+  border-radius: 10px;
   font-family: 'Playfair Display', serif;
-
   margin: 0 5%;
+  height: auto;
+}
+.contenido h3 {
+  font-size: 28px;
+  text-align: left;
+  margin-left: 5px;
+  margin-top: 5px;
+  text-decoration: underline;
+  letter-spacing: 5px;
 }
 
-#editorial h3 {
-  font-size: 28px;
+.contenido h4{
+  font-size: 26px;
   text-align: center;
 }
 
-#editorial p {
-  font-size: 21px;
-  margin: 5% 10%;
+
+.contenido p {
+  font-size: 18px;
+  margin: 0 10%;
+  padding: 10%;
+}
+
+#cont_editorial p i {
+  border: solid 1px #fff;
+  border-radius: 5%;
+  margin-left: 50%;
+  padding: 10px;
+}
+
+p i:hover {
+  background: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
 }
