--- a/css/editorial.css
+++ b/css/editorial.css
@@ -5,12 +5,14 @@
   height: 100vh;
   margin: auto;
   padding-top: 10%;
-  background: #4682B4;
-  color: white;
+  /*background: #4682B4;*/
+  background: #f4a460;
+  color: #000;
 }
 
 #cont_editorial {
-  border: solid 2px #fff;
+  background-image: url("../imagenes/crecimiento.jpeg");
+  border: solid 2px #000;
   border-radius: 10px;
   font-family: 'Playfair Display', serif;
   margin: 0 5%;
@@ -38,10 +40,11 @@
 }
 
 #cont_editorial p i {
-  border: solid 1px #fff;
+  border: solid 1px #000;
   border-radius: 5%;
+  width: 10%;
   margin-left: 60%;
-  padding: 10px;
+  padding: 5px;
   font-size: 14px;
 }
 
