--- a/css/editorial.css
+++ b/css/editorial.css
@@ -4,19 +4,20 @@
   width: 100%;
   height: 100vh;
   margin: auto;
-  padding-top: 10%;
+  padding-top: 30%;
   /*background: #4682B4;*/
-  background: #f4a460;
+  background: #ffffe0;
   color: #000;
 }
 
-#cont_editorial {
+.cont_editorial {
   background-image: url("../imagenes/crecimiento.jpeg");
   border: solid 2px #000;
   border-radius: 10px;
   font-family: 'Playfair Display', serif;
   margin: 0 5%;
   height: auto;
+  padding: 10% 0;
 }
 .contenido h3 {
   font-size: 28px;
@@ -39,7 +40,7 @@
   padding: 10%;
 }
 
-#cont_editorial p i {
+.cont_editorial p i {
   border: solid 1px #000;
   border-radius: 5%;
   width: 10%;
