--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,4 @@
+@import url("reset.css");
 @import url("portadas.css");
 @import url("editorial.css");
 @import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro');
