--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,13 +1,7 @@
-@import url("reset.css");
+﻿@import url("reset.css");
+@import url("contenidos.css");
 @import url("portadas.css");
-@import url("editorial.css");
 @import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro');
-
-* {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-}
 
 header {
 	width: 100%;
