Se quita provisoriamente deslizamiento automatico de las imagenes de portada

--- a/css/contenidos.css
+++ b/css/contenidos.css
@@ -5,8 +5,6 @@
   height: 100vh;
   margin: auto;
   padding-top: 5%;
-  /*background: #4682B4;*/
-  background: #ffffe0;
   color: #000;
 }
 
@@ -20,9 +18,14 @@
   padding: 10% 0;
 }
 
+.cont_editorial p, .cont_info p{
+  padding: 5px 0;
+  word-spacing: 5px;
+}
+
 .cont_info{
-  background-image: url("../imagenes/salud.jpg");
-  color: #fff;
+  background-image: url("../imagenes/salud_1.jpg");
+  color: #000;
   border: solid 2px #000;
   border-radius: 10px;
   font-family: 'Playfair Display', serif;
