--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,13 @@
 ﻿@import url("reset.css");
 @import url("contenidos.css");
 @import url("portadas.css");
+@import url("fontello.css");
+@import url("pie.css");
 @import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro');
+
+body {
+	background: rgba(0, 0, 0, 0.8);
+}
 
 header {
 	width: 100%;
@@ -25,7 +31,7 @@ label img{
 }
 
 .titulos {
-	color: #fff;
+	color: rgba(0, 0, 0, 0.7);
 	font-family: 'Constantia';
 	text-align: center;
 }
@@ -60,7 +66,7 @@ header h2 {
 	padding: 25px 10px;
 	margin-left: 5%;
 	font: bold 18px verdana;
-	color: #fff;
+	color: rgba(0, 0 , 0, 0.7);
 }
 
 #btn-menu:checked ~ .menu {
