--- a/css/estilo.css
+++ b/css/estilo.css
@@ -71,7 +71,6 @@ header h2 {
 
 #btn-menu:checked ~ .menu {
 	margin-left: 10%;
-
 }
 
 section aside {
@@ -92,7 +91,11 @@ section aside {
 	padding: 20px 0;
 }
 
-/*Si el tamaño es de 1024px para arriba*/
+#serv:hover {
+	cursor: pointer;
+}
+
+/*--------------Si el tamaño es de 1024px para arriba--------------------*/
 @media(min-width: 1024px) {
 
 
@@ -102,9 +105,9 @@ section aside {
 		margin-top: 10px;
 	}
 
-	h1 {
-		margin-right: -25px;
+	.titulos {
 		font-size: 31px;
+		color: rgba(255, 255, 255, 0.5);
 	}
 
 	h2 {
@@ -117,8 +120,8 @@ section aside {
     }
 
     header {
-       	background: rgb(0, 0, 0);
-    	height: 12vh;
+    	background: rgb(0, 0, 0);
+			height: 12vh;
     }
 
     .menu {
@@ -127,16 +130,18 @@ section aside {
 
     .menu ul {
     	display: flex;
-		flex-direction: row;
-		float: left;
+			flex-direction: row;
+			float: left;
     }
 
     .menu ul a {
-    	/*margin-right: 5%;*/
+    	margin-right: 5%;
     	margin-left: 0;
-		font-size: 16px;
-		padding-right: 8%;
+			font-size: 16px;
+			color: rgba(255, 255, 255,0.5);
     }
+
+
 
     #menu_serv {
     	position: absolute;
@@ -144,6 +149,10 @@ section aside {
     	left: 20%;
     	width: 300px;
     }
+
+		#menu_serv li:hover {
+			color: rgba(0, 0, 0, 0.5);
+		}
 
 	#menu_serv li{
 		padding: 5% 0;
