--- a/css/contenidos.css
+++ b/css/contenidos.css
@@ -82,6 +82,21 @@
   cursor: pointer;
 }
 
+#en_vivo {
+  position: absolute;
+  right: 10%;
+  top: 15%;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius:5px;
+  border: solid 2px #000;
+  padding: 2%;
+}
+
+#en_vivo:hover {
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0.8);
+}
+
 /*---------------------------Tamaño escritorio--------------------*/
 @media(min-width: 1024px) {
   #cont {
