Se añade texto de la editorial y con sus propios estilos

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,6 +3,7 @@
 @import url("portadas.css");
 @import url("fontello.css");
 @import url("pie.css");
+@import url("blog.css"); 
 @import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro');
 
 body {
