--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?51420814');
-  src: url('../font/fontello.eot?51420814#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?51420814') format('woff2'),
-       url('../font/fontello.woff?51420814') format('woff'),
-       url('../font/fontello.ttf?51420814') format('truetype'),
-       url('../font/fontello.svg?51420814#fontello') format('svg');
+  src: url('../font/fontello.eot?65087956');
+  src: url('../font/fontello.eot?65087956#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?65087956') format('woff2'),
+       url('../font/fontello.woff?65087956') format('woff'),
+       url('../font/fontello.ttf?65087956') format('truetype'),
+       url('../font/fontello.svg?65087956#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?51420814#fontello') format('svg');
+    src: url('../font/fontello.svg?65087956#fontello') format('svg');
   }
 }
 */
@@ -56,6 +56,7 @@
 }
  
 .icon-twitter:before { content: '\f099'; } /* '' */
+.icon-menu:before { content: '\f0c9'; } /* '' */
 .icon-youtube:before { content: '\f16a'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
 .icon-facebook:before { content: '\f308'; } /* '' */
