--- a/css/contenidos.css
+++ b/css/contenidos.css
@@ -95,22 +95,6 @@
   cursor: pointer;
 }
 
-#en_vivo {
-  position: absolute;
-  right: 10%;
-  top: 15%;
-  background: rgba(255, 255, 255, 0.3);
-  border-radius:5px;
-  border: solid 2px #000;
-  padding: 2%;
-}
-
-#en_vivo:hover {
-  cursor: pointer;
-  background: rgba(255, 255, 255, 0.8);
-}
-
-
 /*Si el ancho es menor a 400px*/
 @media(max-width: 400px) {
 	.ver_mas {
@@ -131,6 +115,10 @@
     width: 40%;
     height: auto;
     margin-left: 5%;
+  }
+
+  .contenido:nth-child(even) {
+    padding-top: 10%;
   }
 
   #cont_editorial h3{
