--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,7 +3,7 @@
 @import url("portadas.css");
 @import url("fontello.css");
 @import url("pie.css");
-@import url("blog.css"); 
+@import url("blog.css");
 @import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro');
 
 body {
@@ -150,13 +150,14 @@ section aside {
 
     #menu_serv {
     	position: absolute;
+			z-index: 100;
     	top: 90%;
-    	left: 15%;
+    	left: 20%;
     	width: 300px;
     }
 
 		#menu_serv li:hover {
-			color: rgba(0, 0, 0, 0.5);
+			color: rgba(0, 0, 0, 0.8);
 		}
 
 	#menu_serv li{
