--- a/css/blog.css
+++ b/css/blog.css
@@ -42,3 +42,37 @@
   margin: 0 5%;
   color: rgba(255, 255, 255, 0.5);
 }
+
+/*En tamaño de movil y tablets no se mostrara*/
+.versiculos {
+  display: none;
+}
+/*----------------------------Tamaño escritorio*/
+@media(min-width:1024px) {
+  .blog {
+    width: 100%;
+  }
+
+  .editorial_1 {
+    width: 70%;
+    margin-left: 2%;
+    padding-top: 10%;
+    height: 100%;
+  }
+
+  .editorial_1 p {
+    border-right: solid 2px #fff;
+    padding-right: 20px;
+  }
+
+  .versiculos {
+    display: initial;
+    border: none;
+    float: right;
+    margin: 20% 5%;
+    width: 30%;
+    height: auto;
+    font: normal 18px sans-serif;
+    color: rgba(255, 0, 0, 0.6);
+  }
+}
