--- a/css/estilo.css
+++ b/css/estilo.css
@@ -20,3 +20,21 @@ header {
 	position: relative;
 	z-index: 2;
 }
+
+.editorial {
+	background-image: url("../imagenes/crecimiento.jpeg");
+	height: 40vh;
+}
+
+.ver_mas {
+	border: solid 1px #000;
+	border-radius: 5px;
+}
+.ver_mas:hover {
+	background: rgba(0,0,0,0.2);
+	cursor: pointer;
+}
+
+p {
+	word-spacing: 5px;
+}
