--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,7 +11,7 @@ div img {
 	height: 100vh;
 }
 
-header {
+header nav{
 	position: absolute;
 	z-index: 3;
 }
@@ -21,20 +21,43 @@ header {
 	z-index: 2;
 }
 
+p {
+	word-spacing: 5px;
+}
+
 .editorial {
 	background-image: url("../imagenes/crecimiento.jpeg");
+	background-repeat: no-repeat;
 	height: 40vh;
 }
 
-.ver_mas {
-	border: solid 1px #000;
-	border-radius: 5px;
-}
-.ver_mas:hover {
-	background: rgba(0,0,0,0.2);
-	cursor: pointer;
+
+.grandeza {
+	background-image: url("../imagenes/grandeza.jpg");
+	background-repeat: no-repeat;
+	height: 40vh;
 }
 
-p {
-	word-spacing: 5px;
+.vale {
+	background-image: url("../imagenes/salvacion.jpg");
+	background-repeat: no-repeat;
+	height: 40vh;
+}
+
+.vida {
+	background-image: url("../imagenes/sentido.jpg");
+	background-repeat: no-repeat;
+	height: 40vh;
+}
+
+.hormigas {
+	background-image: url("../imagenes/hormigas.jpg");
+	background-repeat: no-repeat;
+	height: 40vh;
+}
+
+.alma {
+	background-image: url("../imagenes/alma.jpg");
+	background-repeat: no-repeat;
+	height: 40vh;
 }
