--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,7 @@
 ﻿@import url("fontello.css");
 
 body {
-	background-color: #f5f5f5;
+	background-color: #6d6a6a;
 }
 .redes {
 	color: #333030;
@@ -13,7 +13,7 @@ div img {
 
 header nav{
 	position: absolute;
-	z-index: 3;
+	z-index: 5;
 }
 
 .portada {
@@ -62,4 +62,11 @@ header nav{
 	background-repeat: no-repeat;
 	height: 100%;
 
+}
+
+.slogan {
+	position: absolute;
+	z-index: 4;
+	left: 20%;
+	top: 20%;
 }
