--- a/css/estilo.css
+++ b/css/estilo.css
@@ -90,6 +90,8 @@ span {
 blockquote {
 	font-size: 1.6em;
 }
+
+
 @media(min-width: 1028px) {
 	.slogan {
 		margin: 0 15%;
@@ -106,6 +108,7 @@ blockquote {
 	.content aside p{
 		padding: 2% 20%;
 	}
+
 }
 
 /*tamaño movil*/
@@ -120,5 +123,10 @@ blockquote {
 
 	.content aside p{
 		padding: 10% 0;
+	}
+
+	.submenu {
+		border: none;
+		margin-left: 5%;
 	}
 }
